--- a/Other/DocFX/_doc/editor/toc.yml
+++ b/Other/DocFX/_doc/editor/toc.yml
@@ -13,6 +13,9 @@
 - name: C# file properties
   href: File properties.md
 
+- name: Menu commands
+  href: Menu commands.md
+
 - name: Program settings
   href: Program settings.md
 
