--- a/Au.Editor/Au.Editor.csproj
+++ b/Au.Editor/Au.Editor.csproj
@@ -162,6 +162,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3595.46" />
 	  <PackageReference Include="NuGet.Configuration" Version="6.14.0" />
 	  <PackageReference Include="NuGet.Versioning" Version="6.14.0" />
 	</ItemGroup>
