--- a/Au.Editor/Properties/launchSettings.json
+++ b/Au.Editor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Au.Editor": {
       "commandName": "Project",
-      "nativeDebugging": true
+      "nativeDebugging": false
     }
   }
 }
