升级工具链至v145并添加Rider项目配置支持
本次提交将所有C++项目的PlatformToolset升级为v145，.NET项目升级至v4.8.1。同时新增了JetBrains Rider/IDEA相关的项目配置文件及.gitignore，便于跨IDE开发和版本管理。

--- a/Au.Editor/Au.Editor.csproj
+++ b/Au.Editor/Au.Editor.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
@@ -167,12 +167,12 @@
 	  <PackageReference Include="NuGet.Versioning" Version="6.14.0" />
 	</ItemGroup>
 
-	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<Exec Command="$(SolutionDir)Other\BuildEvents\bin\Debug\BuildEvents.exe preBuild $(Configuration)" />
+	<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="Exists('$(SolutionDir)Other\BuildEvents\bin\Debug\BuildEvents.exe')">
+		<Exec Command="$(SolutionDir)Other\BuildEvents\bin\Debug\BuildEvents.exe preBuild $(Configuration)" ContinueOnError="WarnAndContinue" />
 	</Target>
 
-	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="$(SolutionDir)Other\BuildEvents\bin\Debug\BuildEvents.exe postBuild $(Configuration)" />
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="Exists('$(SolutionDir)Other\BuildEvents\bin\Debug\BuildEvents.exe')">
+		<Exec Command="$(SolutionDir)Other\BuildEvents\bin\Debug\BuildEvents.exe postBuild $(Configuration)" ContinueOnError="WarnAndContinue" />
 	</Target>
 
 </Project>
